Move applicaiton definition to library