@@ -12,7 +12,8 @@ buildscript
 
   dependencies 
   {
-    classpath 'com.android.tools.build:gradle:7.4.1'
+    classpath 'com.android.tools.build:gradle:8.4.1'
+    classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
   } // dependencies 
 } // buildscript 
 
@@ -34,21 +35,38 @@ apply plugin: 'com.android.library'
 
 dependencies
 {
+  implementation 'com.jakewharton:butterknife:10.2.3'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
   implementation 'com.google.code.gson:gson:2.8.5'
   implementation 'com.upokecenter:cbor:4.2.0'
   implementation 'com.github.hxcan:CodePosition:2023.9.7'
   implementation 'commons-io:commons-io:2.6'
+  implementation 'com.stupidbeauty:libexist:2019.1.23'
+  implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation 'com.mcxiaoke.volley:library:1.0.19'
+  implementation 'com.google.android.material:material:1.3.0-alpha04'
+  implementation 'com.github.hxcan:builtinftp:2022.4.26'
+  implementation 'com.github.traex.rippleeffect:library:1.3'
+  implementation 'com.github.hxcan:upgrademanager:2023.5.8'
+  implementation 'androidx.multidex:multidex:2.0.1'
+  implementation 'com.github.hxcan:ShutDownAt2100Helper:2023.10.16'
+  implementation 'com.github.hxcan:rotatingactiveuser:2021.11.29'
+  implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '1.6.0'
+  implementation group: 'com.koushikdutta.ion', name: 'ion', version: '3.1.0'
+  implementation 'com.github.hxcan:voiceui:2023.6.27'
+  implementation 'com.github.warkiz.tickseekbar:tickseekbar:0.1.4'
 }
 
 android
 {
   compileSdkVersion 33
+  namespace 'com.stupidbeauty.placeholder'
 
   defaultConfig 
   {
     minSdkVersion 14
     targetSdkVersion 33
-//     versionCode 194
+    multiDexEnabled true
   } // defaultConfig 
 
   sourceSets 
@@ -71,3 +89,26 @@ android
     abortOnError false
   } // lintOptions 
 } // android
+
+// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16
+
+// # enable internal JDK API access at runtime
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+//         # essential for butterknife
+        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+
+//         # if you need Glide or LomBok
+//         # these may not be the exact list, but it works for me
+        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+    ]
+}
